# embedding_prompts

./: README.md  pyproject.toml  requirements.txt  run_example.ipynb
.ipynb_checkpoints/: run_example-checkpoint.ipynb
BM25/: main.py  queries.py  run_example.ipynb
BM25/exemplos/english/as_text/: ATTACK_Design_and_Philosophy_March_2020.pdf.txt  NBRISO-IEC 27035.pdf.txt  NIST.SP.800-61r2.pdf.txt  getting-started-with-attack-october-2019.pdf.txt  mitre_TTPs.pdf.txt
BM25/exemplos/portuguese/as_text/: 2022_Port_903_Dtz_Gestao_Incid_Ciber.pdf.txt  EB20-MF-10.107.pdf.txt  EB70-MC-10.307-final.pdf.txt  EB70MC10232.pdf.txt  MD-30-M-01.pdf.txt  MD31_M07_Doutrina Militar de Defesa Cibernetica.pdf.txt  md30-m-01-vol-2-2a-edicao-2020-dou-178-de-15-set.pdf.txt
BM25/modulos_bm25/: processa_texto.py  reg_query_bm25.py  texto_para_llm.py
BM25/output/: pre_prompt1.txt  pre_prompt2.txt
BM25/output/english/advanced_persistent_threats/: ATTACK_Design_and_Philosophy_March_2020.pdf.txt.txt  NBRISO-IEC 27035.pdf.txt.txt  NIST.SP.800-61r2.pdf.txt.txt  getting-started-with-attack-october-2019.pdf.txt.txt  mitre_TTPs.pdf.txt.txt
BM25/output/english/attack/: ATTACK_Design_and_Philosophy_March_2020.pdf.txt.txt  NBRISO-IEC 27035.pdf.txt.txt  NIST.SP.800-61r2.pdf.txt.txt  getting-started-with-attack-october-2019.pdf.txt.txt  mitre_TTPs.pdf.txt.txt
BM25/output/english/attack_pattern/: ATTACK_Design_and_Philosophy_March_2020.pdf.txt.txt  NBRISO-IEC 27035.pdf.txt.txt  NIST.SP.800-61r2.pdf.txt.txt  getting-started-with-attack-october-2019.pdf.txt.txt  mitre_TTPs.pdf.txt.txt
(+217 files in other folders)
